fix text-transform, col, icon size, padding, collapse and error message of profile user

--- a/src/pages/TISC/Product/Attribute/styles/contentTypeModal.less
+++ b/src/pages/TISC/Product/Attribute/styles/contentTypeModal.less
@@ -1,6 +1,7 @@
 @import (reference) '~antd/es/style/themes/index';
 
 .contentTypeModalWrapper {
+  @height: 48px;
   .contentTypeFooter {
     display: flex;
     justify-content: right;
@@ -8,20 +9,33 @@
       border-radius: 12px;
     }
   }
+
+  :global(.ant-modal-close-x) {
+    height: @height;
+    svg {
+      width: 24px;
+      height: 24px;
+    }
+  }
+  :global(.ant-modal-title) {
+    line-height: 25px;
+  }
+
   :global(.ant-modal-body) {
     padding: 0;
   }
+
+  :global(.ant-modal-header),
   :global(.ant-modal-footer) {
-    height: 48px;
+    height: @height;
     padding: 12px 16px;
-    border: 0;
     box-shadow: inset 0 0.5px 0 #000;
   }
+  :global(.ant-modal-footer) {
+    border: 0;
+  }
   :global(.ant-modal-header) {
-    height: 48px;
-    padding: 14px 24px;
     border-bottom: 0;
-    box-shadow: inset 0 -0.5px 0 #000;
   }
   :global(.ant-tabs-nav) {
     &::before {
