--- a/src/pages/TISC/Product/Basis/Preset/styles/PresetItem.less
+++ b/src/pages/TISC/Product/Basis/Preset/styles/PresetItem.less
@@ -94,6 +94,7 @@
     &_value {
       :global(.ant-input) {
         color: @primary-color-dark;
+        text-transform: capitalize;
       }
     }
     &_delete_icon {
